# medio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-17-modernization-design.md
img_io/: affine.py  convert_nib_itk.py  io.py  itk_io.py  itk_single_dicom.py  metadata.py  nib_io.py  pdcm_write.py
io/: io.py  itk_io.py  nib_io.py  sitk_io.py
medimg/: medimg.py
medio/: __init__.py  itk_io.py  read_save.py
medio/backends/: itk_io.py  itk_single_dicom.py  nib_io.py  pdcm_io.py  pdcm_unpack_ds.py  unpack_ds.py
medio/backends/dicom_numpy_src/: combine_slices.py  zip_archive.py
medio/medimg/: __init__.py  medimg.py
medio/metadata/: affine.py  convert_nib_itk.py  dcm_uid.py  itk_orientation.py  metadata.py  pdcm_ds.py
medio/tests/itk_dcm_orientations/: itk_dcm_orientations.py  itk_dcm_orientations_v5.0.1.csv  itk_utils.py  orientations_utils.py
medio/utils/: explicit_slicing.py  files.py  two_way_dict.py
metadata/: affine.py  convert_nib_itk.py  itk_orientation.py  metadata.py
tests/: conftest.py  test_affine.py  test_backends.py  test_convert_nib_itk.py  test_dcm_uid.py  test_explicit_slicing.py  test_files.py  test_itk_convert.py  test_itk_orientation.py  test_medimg.py  test_metadata.py  test_pdcm_ds.py  test_read_write.py  test_two_way_dict.py
tests/data/dcm/: IM1.dcm  IM10.dcm  IM100.dcm  IM101.dcm  IM102.dcm  IM103.dcm  IM104.dcm  IM105.dcm  IM106.dcm  IM107.dcm  IM108.dcm  IM109.dcm  IM11.dcm  IM110.dcm  IM111.dcm  IM112.dcm  IM113.dcm  IM114.dcm  IM115.dcm  IM116.dcm  IM117.dcm  IM118.dcm  IM119.dcm  IM12.dcm  IM120.dcm  IM121.dcm  IM122.dcm  IM123.dcm  IM124.dcm  IM125.dcm  IM126.dcm  IM127.dcm  IM128.dcm  IM129.dcm  IM13.dcm  IM130.dcm  IM131.dcm  IM132.dcm  IM133.dcm  IM134.dcm  (+110 more)
tests/itk_dcm_orientations/: itk_dcm_orientations.py  itk_utils.py  orientations_utils.py
utils/: explicit_slicing.py
