[project]
name = "medio"
version = "0.4.3"
description = "Medical images I/O Python package"
authors = [
    { name = "RSIP Vision", email = "info@rsipvision.com" },
    { name = "Jonathan Daniel", email = "jonathand655@gmail.com" },
]
requires-python = "~=3.7"
readme = "README.md"
license = "Apache-2.0"
keywords = ["medical-images", "IO", "itk", "nibabel", "pydicom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["itk", "nibabel", "pydicom", "dicom-numpy"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2,<9; python_version >= '3.9'",
    "pytest<8.4.2; python_version < '3.9'",
]

[project.urls]
Repository = "https://github.com/RSIP-Vision/medio"
"Bug Tracker" = "https://github.com/RSIP-Vision/medio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
