[project]
name = "medio"
version = "0.6.0"
description = "Medical images I/O Python package"
authors = [
    { name = "RSIP Vision", email = "info@rsipvision.com" },
    { name = "Jonathan Daniel", email = "jonathand655@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
keywords = ["medical-images", "IO", "itk", "nibabel", "pydicom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "itk",
    "nibabel",
    "numpy",
    "pydicom",
    "dicom-numpy",
    "typing_extensions>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.11",
    "ty>=0.0.23",
]

[project.urls]
Repository = "https://github.com/RSIP-Vision/medio"
"Bug Tracker" = "https://github.com/RSIP-Vision/medio/issues"

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
exclude = ["tests/itk_dcm_orientations"]

[[tool.ty.overrides]]
include = ["medio/backends/itk_io.py"]
rules = {unresolved-attribute = "ignore", invalid-parameter-default = "ignore", invalid-assignment = "ignore", invalid-return-type = "ignore"}

[[tool.ty.overrides]]
include = ["medio/backends/nib_io.py"]
rules = {unresolved-attribute = "ignore", possibly-missing-submodule = "ignore", not-subscriptable = "ignore", not-iterable = "ignore", invalid-argument-type = "ignore", invalid-assignment = "ignore", invalid-return-type = "ignore"}

[[tool.ty.overrides]]
include = ["medio/backends/pdcm_io.py"]
rules = {possibly-missing-submodule = "ignore", invalid-assignment = "ignore", invalid-return-type = "ignore"}
